<resources>
    <string name="app_name">BUSSAAT</string>
    <string name="txtyolcu">JOURNEY RULES</string>
    <string name="yolcukural" >- It is not possible to travel without an electronic ticket or Personalized BursaKart.</string>
    <string name="yolcukural3" >- It is not possible to get on and off public transport vehicles other than the stops.</string>
    <string name="yolcukural5" >- The button to get off is pressed before the stop, the button to get off at the last moment is not pressed.</string>
    <string name="yolcukural6" >- Children aged 0-6 can travel free of charge, provided that they are accompanied by their parents.</string>
    <string name="toplukural1">- No noise can be made.</string>
    <string name="toplukural2">" - Cannot speak loudly.."</string>
    <string name="toplukural3">" -Radio-tape cannot be listened to loudly."</string>
    <string name="toplukural4">" - Behaviors that endanger human life cannot be performed."</string>
    <string name="toplukural8">- Litter cannot be thrown on public transport.</string>
    <string name="toplukural9">-Genel ahlak kuralları dışında davranılamaz.</string>
    <string name="toplukural10">-İlan - afiş asılamaz dağıtılamaz.</string>
    <string name="toplukural11">-Dilencilik yapılamaz.</string>
    <string name="toplukural14">- In this case, legal action will be taken in accordance with the relevant articles of the Turkish Penal Code.</string>
    <string name="duraksaatleri">" STOP HOURS"</string>
    <string name="bilet_tipi_menü">" BUKART AND TICKET TYPES"</string>
    <string name="kartbasvurubilgileri">" CARD APPLICATION INFORMATION"</string>
    <string name="ogrenci">" Student:"</string>
    <string name="ogrenci1">Formal Primary and High School students, Open Education Faculty students who have not completed the age of 27 (under the age of 28) and are not registered with the SGK, students who have not completed the age of 27 (under the age of 28) of universities within the scope of YÖK, and students who have not completed the age of 30 (less than 31 years old) and postgraduate and doctorate students who are not registered with the SGK, foreign students studying in our city, Open Primary and High School students who have not completed the age of 27 (under the age of 28) and are not registered with the SGK, and Article 11 of the Law No. 3308 It refers to the students of apprenticeship schools as required.</string>
    <string name="indirimseyehat">" A) Those Who Will Benefit From Discounted Travel Cards and Application Conditions"</string>
    <string name="aogrenci">a)Student</string>
    <string name="istenenbelge">" Required Documents"</string>
    <string name="vesikalıkfoto">" - 1 current passport-size photograph taken within the last 6 months"</string>
    <string name="ogrencistenen1">-Primary and secondary school students studying in formal education institutions, T.R. Querying the ID Number</string>
    <string name="ogrencistenen2">-Açık Primary and High School students, as per the protocol signed with the Ministry of National Education, T.R. Querying the Identity Number, document showing that it is not registered in SSI</string>
    <string name="ogrencistenen3">-Student certificate of the relevant semester, obtained within the last month for University and High School students, (Student status must be active in the student certificate received.)</string>
    <string name="ogrencistenen4">-Students who do not exceed the age of 27 (under the age of 28) of the Vocational Education Center, Maturation Institute and make-up programs must apply with the student certificates they have received within the last month.</string>
    <string name="ogrencistenen5">- Students who have completed the 13th term in Open Education High School and Open Primary Education schools, and those who have completed their education in two-year departments of Anadolu University, and those who have completed their education in 4-year departments, exceeding 7 years, and students with a waiting period, and course students outside the official institution cannot benefit from the discount right.</string>
    <string name="ogretmen">b)Teacher</string>
    <string name="ogretmenistenen1">-Teachers working in public and private, formal primary and secondary schools: TC inquiry in accordance with the MEB Protocol, (included in the e-municipality system)</string>
    <string name="ogretmenistenen2">- For the academic staff (Professor, Associate Professor, Assistant Professor, Lecturer, Research Assistant, Lecturer, Specialist Translator and Educational Planner) in Universities and High Schools, a valid job certificate and identity card with banderol</string>
    <string name="ogretmenistenen3">-Work Place Certificate, Personnel Movement Approval, copy of diploma and formation upon request for Paid Teachers, Master Trainers, Contracted Teachers working in public institutions</string>
    <string name="ogretmenyazi">All protocols are made by Burulaş and sent to the system by the Head of the Information Processing Department.</string>
    <string name="yasli">c)Old</string>
    <string name="nüfuscüzdanı">-Birth certificate</string>
    <string name="kurumsalistenenbelge">- Defined by the Corporate Profit Implementation directive.</string>
    <string name="yasliyazi">Those who complete the above documents apply to Burulaş.</string>
    <string name="ücretsizseyehat">" B) Those Who Will Benefit From Free Travel Cards and Application Conditions"</string>
    <string name="kosul">a) Veteran, Spouse, Mother and Father, Unmarried children under the age of 25, Wife of the Martyr Mother and Father, unmarried children under the age of 25 and National Athletes to whom Salary is Paid by the SGK Institution:</string>
    <string name="kimlikfotokopi">- Copy of ID card issued by the Ministry of Family and Social Policies or SGK Institution</string>
    <string name="basınkartı">b) Press Card Holders</string>
    <string name="basınkartıistenen">-Press Card issued by the Prime Ministry General Directorate of Press and Broadcasting, a travel card that will provide free pass in case of applying to the Travel Cards Offices with your 1 current photo and ID is defined.</string>
    <string name="emniyet">c) Security Services Class Personnel</string>
    <string name="emniyetistenen1">-They travel with an ID card issued by the General Directorate of Security, the Gendarmerie General Command, and the Coast Guard Command.</string>
    <string name="kişiselkarttalep">Documents Required when a personalized card is requested:</string>
    <string name="belediye">d) Municipal Police</string>
    <string name="belediyeistenen">-They travel with the Police Identity Card issued by the municipalities.</string>
    <string name="belediyeistenen2">- Approval given by the Police Department</string>
    <string name="postadagıtıcıları">e) Mail Distributors</string>
    <string name="postadagıtıcıları1">1/1/2013 tarihinden geçerli olmak üzere, T.C. Posta ve Telgraf Teşkilatı Genel Müdürlüğü kadro ve pozisyonlarında bulunup, Büyükşehir Belediyeleri sınırları içeresinde dağıtıcı olarak görev yapanlara, belediye tarafından işletilen toplu taşıma araçları ile özel halk otobüslerinde ücretsiz yararlanmaları için anılan Genel Müdürlük tarafından verilen fotoğraflı kimlik kartı ile seyahat ederler.</string>
    <string name="postadagıtıcıları2">-T.C. Posta ve Telgraf Teşkilatı Bölge Müdürlüğü tarafından verilen onay</string>
    <string name="muhtackişiler">g)Muhtaç, Güçsüz ve Kimsesizler</string>
    <string name="muhtacistenen1">- Approval letters received from the relevant District Governorates or the receipt of the last pension of the needy received from the PTT.</string>
    <string name="engelliler">h) Disabled, Disabled companion</string>
    <string name="engellileristenen1">-Health board report and Disabled identity card documenting 40% or more disability from a full-fledged State Hospital</string>
    <string name="engellileristenen2">-Health board report from a full-fledged State Hospital certifying that she is 50% or more severely disabled (for a disabled companion)</string>
    <string name="engellileristenen3">-1 up-to-date passport photo.</string>
    <string name="kanun">C) Benefit and Application Conditions of Those Subjected to the Allowance Law</string>
    <string name="kanunistenen">- The approved staff list and request letter of the personnel.</string>
    <string name="bilgi">They apply to Burulaş with the above-mentioned documents and receive a free personalized travel card.</string>
    <string name="hatseciniz">SELECT LINE:</string>
    <string name="gidis">" GOING"</string>
    <string name="pazartesi">" MONDAY"</string>
    <string name="sali">" TUESDAY"</string>
    <string name="carsamba">" WEDNESDAY"</string>
    <string name="persembe">" THURSDAY"</string>
    <string name="cuma">FRIDAY</string>
    <string name="cumartesi">SATURDAY</string>
    <string name="pazar">SUNDAY</string>
    <string name="tek_biletler">SINGLE USE TICKETS</string>
    <string name="bukart" translatable="false">BURSAKART</string>
    <string name="kısa_hat_fiyat">Short Line Price: 6TL</string>
    <string name="uzun_hat_fiyat">Long Line Price: 8TL</string>
    <string name="indirimli_bilet_fiyati">Discounted Ticket Price: 4TL</string>
    <string name="idirimli_bilet_tam_fiyat">Full Ticket Price: 10TL</string>
    <string name="budo_bilet_fiyati">F3 Ticket Price: 15TL</string>
    <string name="kisillestirilmis_kart_bursa">Personalized Bursakart</string>
     <string name="bursakart_fiyat">Bursakart Price: 8TL</string>
    <string name="kisisel_kart_tipleri">KİŞİSELLEŞTİRİLMİŞ KART TİPLERİ</string>
    <string name="indirimli_kart_tipleri">Discount Card Types</string>
    <string name="indirimli_ogrenci_kart">- Student</string>
    <string name="indirimli_ogretmen_kart">- Teacher</string>
    <string name="indirimli_yasli_kart">"- age 65+ "</string>
    <string name="ücretsiz_kart_tipleri">" Free Card Types"</string>
    <string name="ücretsiz_engelli">- Disabled / Disabled-Accompanying</string>
    <string name="ücretsiz_yasli">- Age 65+ (Receiving needy salary from the State with Law No. 2022)</string>
    <string name="ücretsiz_yasli2">- 65+ age free (based on the regulation of the Ministry of Family and Social Policies dated 04.03.2014)</string>
    <string name="ücretsiz_harcirah">- Per diem</string>
    <string name="ücretsiz_sporcu">- National athlete</string>
    <string name="ücretsiz_basin">- Press</string>
    <string name="uyari">Those traveling with a Discounted or Free Travel card are required to show their Personalized BursaCard to the drivers without being asked.</string>
    <string name="yolcukural2">-For those who attempt to travel with someone else\'s or fake Personalized BursaKart, the driver takes the BursaCard and issues a report and delivers it to our directorate.</string>
    <string name="yolcukural4">-You can get on the public transport vehicles from the front door, and get off at the middle and back doors.</string>
    <string name="yolcukural7">- Disabled citizens, the elderly, pregnant women and women with children are accommodated. Priority is given for boarding and landing.</string>
    <string name="toplumkural">In Public Transport vehicles;</string>
    <string name="toplukural5">- Other passengers cannot be disturbed by sleeping or leaning.</string>
    <string name="toplukural7">" - Litter cannot be thrown on public transport."</string>
    <string name="toplukural13">- It is not allowed to ride with large items, flammable, explosive, breakable, spillable and smelly substances that may cause discomfort and harm to the vehicle and other passengers.</string>
    <string name="toplukural12">" -No tools, seats, etc. in public transport. equipment cannot be damaged."</string>
    <string name="toplukural15">- While driving, the driver cannot be spoken to unless it is mandatory.</string>
</resources>