<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".yolcukurallari">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="109dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="95dp"
                    android:layout_height="59dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    app:srcCompat="@drawable/otobus" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="2dp"
            android:layout_height="85dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/txtyolcukural"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="41dp"
                    android:gravity="center"
                    android:text="@string/txtyolcu"
                    android:textColor="@color/sari"
                    android:textSize="20dp"
                    android:textStyle="bold">

                </TextView>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uyari"
                android:text="@string/uyari"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="150dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/kural1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/gri"
                    android:text="@string/yolcukural">

                </TextView>

                <TextView
                    android:id="@+id/kural2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kural1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural2">

                </TextView>

                <TextView
                    android:id="@+id/kural3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kural2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural3">

                </TextView>

                <TextView
                    android:id="@+id/kural4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kural3"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural4">

                </TextView>

                <TextView
                    android:id="@+id/yolcukural5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kural4"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural5">

                </TextView>

                <TextView
                    android:id="@+id/yolcukural6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yolcukural5"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural6">

                </TextView>

                <TextView
                    android:id="@+id/yolcukural7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yolcukural6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/yolcukural7">

                </TextView>

                <TextView
                    android:id="@+id/toplukural"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yolcukural7"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplumkural"
                    android:textColor="@color/black"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/kural"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural1">

                </TextView>

                <TextView
                    android:id="@+id/toplukural2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kural"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural2">

                </TextView>

                <TextView
                    android:id="@+id/toplukural3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:text="@string/toplukural3">

                </TextView>

                <TextView
                    android:id="@+id/toplukural4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural3"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural4">

                </TextView>

                <TextView
                    android:id="@+id/toplukural5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural4"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:text="@string/toplukural5">

                </TextView>

                <TextView
                    android:id="@+id/toplukural7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural5"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="18dp"
                    android:text="@string/toplukural7">

                </TextView>

                <TextView
                    android:id="@+id/toplukural8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural7"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural8">

                </TextView>

                <TextView
                    android:id="@+id/toplukural9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural8"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:text="@string/toplukural9">
                </TextView>

                <TextView
                    android:id="@+id/toplukural10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural9"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural10">
                </TextView>

                <TextView
                    android:id="@+id/toplukural11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural10"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural11">
                </TextView>

                <TextView
                    android:id="@+id/toplukural12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural11"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural12">
                </TextView>

                <TextView
                    android:id="@+id/toplukural13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural12"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/gri"
                    android:layout_marginEnd="16dp"
                    android:text="@string/toplukural13">
                </TextView>

                <TextView
                    android:id="@+id/toplukural14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural13"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/gri"
                    android:layout_marginTop="2dp"
                    android:text="@string/toplukural14">
                </TextView>

                <TextView
                    android:id="@+id/toplukural15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toplukural14"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/gri"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/toplukural15">
                </TextView>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>